2003-08-20  Not Zed  <NotZed@Ximian.com>

	** See bug #47765.

	* camel-folder-search.h: Removed match1 member.

	* camel-folder-search.c (camel_folder_search_match_expression):
	use current directly rather than match1.  This method isn't used
	anywhere anyway.
	(search_not): remove match1 stuff.
	(search_match_all): properly handle the match-all against 1
	message as a scalar result, not an array result.

2003-09-03  Not Zed  <NotZed@Ximian.com>

	* camel-http-stream.c (camel_http_stream_set_proxy): handle NULL
	proxy_url - unset the proxy.

2003-08-29  Not Zed  <NotZed@Ximian.com>

	* camel-object.c (camel_object_state_write): 
	(cobject_getv):
	(cobject_setv, cobject_state_read, cobject_state_read) 
	(cobject_state_write): removed debug printfs.

	* providers/local/camel-local-folder.c (local_getv): Need to copy
	the local properties list before passing it out, since it's freed.

2003-08-27  Not Zed  <NotZed@Ximian.com>

	* providers/local/camel-local-folder.c (local_getv): implement
	PERSISTENT_PROPERTIES, for index mode.

	* camel-object.c (cobject_state_read): Also add property reading,
	and bump version to 1.
	(cobject_state_write): add persistent property writing.

2003-08-26  Not Zed  <NotZed@Ximian.com>

	* camel-folder.c (folder_getv): chain up properly.

	* camel-file-utils.c (camel_file_util_savename): helper to create
	a .#filename filename.

	* providers/local/camel-local-folder.c
	(camel_local_folder_construct): init meta-data for local folders.
	(local_getv): chain up properly, if args are not processed, rather
	than don't if they aren't.

2003-08-23  Not Zed  <NotZed@Ximian.com>

	* camel-object.c (cobject_class_init): added a new event,
	meta_changed.
	(camel_object_meta_set, camel_object_meta_get): meta-data api.
	(camel_object_free_hooks): Free meta-data if it is set on the
	object.

	* providers/local/camel-local-folder.c
	(camel_local_folder_get_type): setup a property list for local
	folders, just 'index_body' at present.
